# EXray

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build_with_cmake.yml
src/: AABB.cpp  AABB.hpp  BVH.cpp  BVH.hpp  Camera.cpp  Camera.hpp  Entity.hpp  EntityList.cpp  EntityList.hpp  ImageWriter.cpp  ImageWriter.hpp  Material.hpp  Perlin.cpp  Perlin.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  Scene_.hpp  Texture.cpp  Texture.hpp  Utility.hpp  Vector3.cpp  Vector3.hpp  camera.cpp  camera.hpp  entity.cpp  entity.hpp  image.cpp  image.hpp  image_writer.cpp  image_writer.hpp  main.cpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  utility.hpp  (+2 more)
src/entities/: Box.cpp  Box.hpp  MovingSphere.cpp  MovingSphere.hpp  RotateY.cpp  RotateY.hpp  Sphere.cpp  Sphere.hpp  Translate.cpp  Translate.hpp  sphere.cpp  sphere.hpp
src/materials/: Dielectric.cpp  Dielectric.hpp  Diffuse.cpp  Diffuse.hpp  Light.cpp  Light.hpp  Metal.cpp  Metal.hpp
src/textures/: Checker.cpp  Checker.hpp  Image.cpp  Image.hpp  Noise.cpp  Noise.hpp  SolidColor.hpp
